@@ -1,3 +1,8 @@
+2001-07-03  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Inst/Defn.pm (orac_configure_for_instrument): Try to recognise
+	IRCAM2 and UFTI2
+
 2001-07-02  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Inst/Defn.pm: Add IRIS2
